# shoppingdb

./: .gitignore  Cargo.toml
src/: app.rs  main.rs  ui.rs  util.rs
