[package]
name = "shoppingdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
crossterm = "0.28.1"
ratatui = "0.29.0"
rusqlite = "0.32.1"
tui-textarea = { version = "0.7.0", features = ["crossterm"], default-features = false }
